CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

Version 1.4.0
----------------------------------------------------------------------
19 February 2007
+ Database
  o Added limit error check to mysql.php and mysqli.php

14 February 2007
+ Theme
  o changed padded style from px to em
  o added new form style for dropping out of form tables.
+ Settings
  o Bug 1659055 - if a single setting is saved without loading the
    module, all settings would get reset. Made change to only clear
    items getting saved.


13 February 2007
+ Changed Init.php translate function. Should now track previous
  directory setting properly.
+ Added several translate functions throughout the base classes.
+ Moved language settings to a new config file : language.php 
+ Removed textdomain function from Init.php. It was a redundant call.
+ Removed language setting from setup config template
+ Updated files: conf/language.php

12 February 2007
+ Theme - added webpage-summary to float fix

6 February 2007
+ Init.php - strips the UTF8 off the end of locale to match preference
             file
+ Language - updated po file

2 February 2007
+ Editor - Fixed FCKeditor's style sheet

1 February 2007
+ Theme - added code to prevent image overlap in blog and webpage
+ Database.php - addTableColumn checks for a column's existence and
  returning false if so. Prevents error lock ups.

31 January 2007
+ File.php - removed old version of readDirectory

30 January 2007
+ Core
  o Added check for leading slash in url sent to reroute function
  o Added setLastPost to reroute function. Function was getting skipped.
+ Database
  o fixed getObjects. Extra parameters were passed to constructors BUT
    the object is not passed by reference in php 4. Once the object
    was created, it was cleared 

29 January 2007
+ Editors
  o Removed dependence on SCRIPT_FILENAME variable for FCK's file
    manager
  o Fixed the style settings in the FCK editor