@@ -8,6 +8,9 @@ Version 1.4.0
 + Database
   o Added limit error check to mysql.php and mysqli.php
 
++Module
+  o Changed default image and file directories to false.
+
 14 February 2007
 + Theme
   o changed padded style from px to em
